fixed overflow of display when inputting a number
fixed overflow capped at 29 chars on display

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
     display:flex;
     flex-direction:column;
     justify-content: center;
-    max-width:500px;
+    max-width:280px;
+    min-width:277px;
     border:1px solid black;
 }
 .screen{
